--- a/src/theme.scss
+++ b/src/theme.scss
@@ -34,10 +34,10 @@
     --theme-inactive-checkbox-background-color: dimgrey;
     --theme-inactive-checkbox-color: #fff;
     --theme-history-range-controls-p: dimgrey;
-    --theme-latest-expense-date-time-background-color: #505050;
+    --theme-latest-expense-date-time-background-color: dimgrey;
     --theme-latest-expense-date-time-color: white;
     --theme-latest-expense-border: 1px solid rgb(88, 88, 88);
-    --theme-latest-expense-background-color: dimgrey;
+    --theme-latest-expense-background-color: #505050;
     --theme-latest-expense-color: white;
     --theme-latest-expense-icon-color: white;
 }
